# Diploma

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Diploma/: CMakeLists.txt  Diploma.cpp  ProgramOptsHandler.cpp  ProgramOptsHandler.h  diploma-make-util.cmake
Diploma/plot/: PlotGrid.cpp  PlotGrid.h  PlotIsolines.cpp  PlotIsolines.h  PlotLines.cpp  PlotLines.h
Diploma/plots/: Plot.h  PlotField.cpp  PlotField.h  PlotFieldIsolines.cpp  PlotFieldIsolines.h  PlotFluid.cpp  PlotFluid.h  PlotHeightCoefs.cpp  PlotHeightCoefs.h  PlotIsolines.cpp  PlotIsolines.h  PlotLines.cpp  PlotLines.h  PlotModelFieldError.cpp  PlotModelFieldError.h  PlotSTGrid.cpp  PlotSTGrid.h
Diploma/problem/: MagneticField.cpp  MagneticField.h  MagneticFluid.cpp  MagneticFluid.h  Solution.cpp  Solution.h  result_codes.h
Diploma/problem/grids/: SimpleTriangleGrid.cpp  SimpleTriangleGrid.h
Diploma/resources/plot-configs/: field-error.cfg  field-isolines.cfg  field.cfg  fluid.cfg  height-coefs.cfg  st-grid.cfg
Diploma/util/: Array.h  Array.tpp  BezierCurve.cpp  BezierCurve.h  Matrix.h  Matrix.tpp  Pipe.cpp  Pipe.h  RightSweep.cpp  RightSweep.h  Vector2.h  Vector2.tpp  debug_info.h  files_util.h  math_ext.h  program_opts.cpp  program_opts.h  type_traits_ext.h  util.cpp  util.h
README/: README_RU.md
